feat(meals): add DELETE endpoint
