# swagger.json
@@ -151,6 +151,36 @@
                 }
             }
         },
+        "/meal/{mealId}": {
+            "delete": {
+                "tags": ["Meals"],
+                "summary": "Delete one meal",
+                "description": "All ingredients related to this meal will also be deleted",
+                "parameters": [
+                    {
+                        "name": "mealId",
+                        "in": "path",
+                        "description": "Id of the meal to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Missing or Invalid Credentials"
+                    },
+                    "404": {
+                        "description": "User does not have a meal with provided id"
+                    }
+                }
+            }
+        },
         "/ingredient": {
             "post": {
                 "tags": ["Ingredients"],
